force-app/main/default/objects/Dialogue__c/Dialogue__c.object-meta.xml
<CustomObject>
    <label>Dialogue</label>
    <nameField>
        <displayFormat>DIA-{0000}</displayFormat>
        <label>Dialogue</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dialogues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>