force-app/main/default/objects/Dialogue__c/fields/Buttons_or_Options__c.field-meta.xml
<CustomField>
    <fullName>Buttons_or_Options__c</fullName>
    <label>Buttons or Options</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>