force-app/main/default/objects/Dialogue__c/fields/Next_Dialog__c.field-meta.xml
<CustomField>
    <fullName>Next_Dialog__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Dialog</label>
    <referenceTo>Dialogue__c</referenceTo>
    <relationshipLabel>Dialogues (Next Response)</relationshipLabel>
    <relationshipName>Dialogues</relationshipName>
    <type>Lookup</type>
</CustomField>