force-app/main/default/objects/Dialogue__c/fields/Parent_Record__c.field-meta.xml
<CustomField>
    <fullName>Parent_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Record</label>
    <referenceTo>Dialogue__c</referenceTo>
    <relationshipName>Messenger_Bots</relationshipName>
    <type>Lookup</type>
</CustomField>