force-app/main/default/objects/Dialogue__c/fields/Parent_Template__c.field-meta.xml
<CustomField>
    <fullName>Parent_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Template</label>
    <referenceTo>Messenger_Bot__c</referenceTo>
    <relationshipLabel>Dialogues</relationshipLabel>
    <relationshipName>Dialogues</relationshipName>
    <type>Lookup</type>
</CustomField>