force-app/main/default/objects/Dialogue__c/fields/Question__c.field-meta.xml
<CustomField>
    <fullName>Question__c</fullName>
    <label>Question</label>
    <length>25</length>
    <type>Text</type>
</CustomField>