force-app/main/default/objects/Dialogue__c/fields/Question_Description__c.field-meta.xml
<CustomField>
    <fullName>Question_Description__c</fullName>
    <label>Question Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>