force-app/main/default/objects/Dialogue__c/fields/Question_Title__c.field-meta.xml
<CustomField>
    <fullName>Question_Title__c</fullName>
    <label>Question Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>