force-app/main/default/objects/Dialogue__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Question Based</fullName>
            </value>
            <value>
                <fullName>Template Based</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Option</fullName>
            </value>
            <value>
                <fullName>Separate Button</fullName>
            </value>
            <value>
                <fullName>Separate Option</fullName>
            </value>
            <value>
                <fullName>Separate Text</fullName>
            </value>
            <value>
                <fullName>Option Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>